--- a/index.html
+++ b/index.html
@@ -17,11 +17,36 @@
 </head>
 <body>
     
-    <div class="bg-transparent"></div>
         <div class="container">
+            <!-- Animasi Background -->
+            <div class="night">
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+                <div class="shooting_star"></div>
+            </div>
+                <!-- Akhir Animasi Background -->
+
+
             <div class="header">
                 <div class="logo">
-                <img src="img/LOGO-FM.png" alt="logo-fm">
+                <img src="img/LOGO-FM.png" alt="logo-fm">   
                 </div>
                 <div class="nameFm">
                     <h2>Firman Maulana</h2>
